--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -5,7 +5,7 @@
   font-variation-settings:
     "wdth" 100;
 }
-/* sared style */
+/* shared style */
 
 .text-primary{
   color: #FD6E0A;
@@ -13,8 +13,36 @@
 /* Nav styles */
 nav{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 200px;
+}
+.dark-2{
+  color: #474747;
+}
+.btn-primary{
+  background-color: #FD6E0A;
+  font-weight: bold;
+  font-size: 20px;
+  color: white;
+  padding: 18px 35px;
+  border: none;
+  border-radius: 5px;
+  
 }
 .nav-title{
   font-weight: 800;
   font-size: 45px;
+}
+nav ul{
+  display: flex;
+  align-items: center;
+}
+nav ul li{
+  list-style: none;
+  margin-right: 50px;
+}
+nav li a{
+  text-decoration: none;
+  font-size: 20px;
 }
