added some images

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -30,6 +30,12 @@ nav{
   border-radius: 5px;
   
 }
+/* header section */
+.header{
+  background-image: url('../images/developer.png'), url('../images/header_bg.png');
+  background-repeat: no-repeat;
+  background-position: top left, bottom right;
+}
 .nav-title{
   font-weight: 800;
   font-size: 45px;
@@ -45,4 +51,29 @@ nav ul li{
 nav li a{
   text-decoration: none;
   font-size: 20px;
+}
+
+/* banner styles */
+.banner-greetings{
+  font-size: 45px;
+  font-weight: 600;
+}
+.banner-title{
+  font-weight: bold;
+  font-size: 85px;
+}
+.banner-description{
+  font-weight: 585px;
+  font-size: 18px;
+}
+.banner-img{
+  width: 584px;
+}
+.banner{
+  display: flex;
+  justify-content: space-between;
+  margin: 0 35px 0 200px;
+}
+.banner-content{
+  max-width: 580px;
 }
